trying to prevent overflow on mobile

--- a/404Styles.css
+++ b/404Styles.css
@@ -20,16 +20,14 @@ body, html {
 #bg {
     position: absolute;
     display: inline;
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     top: 0;
-    /* background-image: url('https://ak2.picdn.net/shutterstock/videos/18774452/thumb/1.jpg');
-    background-size: 15vmax;
-    background-position: center; */
     opacity: 0.3;
     color: white;
     font-size: 1vmax;
     line-height: 2.2vmax;
+    overflow: hidden !important;
 }
 
 z {
